--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,10 +17,10 @@ include_directories(/media/disk/setup/oracle/instantclient_23_4/sdk/include/)
 link_directories(/media/disk/setup/oracle/instantclient_23_4/)
 
 add_executable(c_client main.c)
-target_link_libraries(c_client ociei clntsh clntshcore nnz)
+target_link_libraries(c_client clntsh)
 
 add_executable(cpp_client main.cpp)
-target_link_libraries(cpp_client occi clntsh clntshcore nnz)
+target_link_libraries(cpp_client occi clntsh)
 
 if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
     target_link_libraries(c_client pthread dl m)
